# rexer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  config.rs  error.rs  extension.rs  git.rs  main.rs
src/commands/: edit.rs  init.rs  install.rs  mod.rs  reinstall.rs  state.rs  uninstall.rs  update.rs  utils.rs
tests/: cli_tests.rs
