[package]
name = "rexer"
version = "0.1.0"
edition = "2021"
description = "Redmine Extension (Plugin and Theme) manager"
license = "MIT"
repository = "https://github.com/hidakatsuya/rexer-rs"
authors = ["hidakatsuya <hidakatsuya@gmail.com>"]

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
regex = "1.10"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
openssl-probe = "0.1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"