[package]
name = "rexer"
version = "0.2.0"
edition = "2021"
description = "Redmine Extension (Plugin and Theme) manager"
license = "MIT"
repository = "https://github.com/hidakatsuya/rexer-rs"
authors = ["hidakatsuya <hidakatsuya@gmail.com>"]

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.13", features = ["json"] }
url = "2.5"
regex = "1.12"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
colored = "3.1"
tempfile = "3.23"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.23"
assert_cmd = "2.1"
predicates = "3.0"
